fixed mobile menu z-index

--- a/src/Components/MobileMenu/MobileMenu.css
+++ b/src/Components/MobileMenu/MobileMenu.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 3;
+    z-index: 7;
     background-color: rgba(0, 0, 0, 0.678);
     width: 100vw;
     height: 100vh;
