--- a/src/Pages/Category/CategoryPage.css
+++ b/src/Pages/Category/CategoryPage.css
@@ -6,6 +6,7 @@
 .app__category-page__main__products{
     padding: 0 var(--margin-normal);
     margin-top: var(--margin-big);
+    margin-bottom: var(--margin-big);
 }
 
 .app__category-page__main__products__inner{
